# MafIXMAS2018

./: .gitignore  CMakeLists.txt  MafI.sublime-project  MafI.sublime-workspace  MafIXMAS.tex  README.md  deb.sh  main.cpp  rel.sh
SIMD-Bitset/: bitset.h  test.cpp
